chore: upgrade spring version for 4 and switch to JUnit 5 for testing